--- a/emu/CMakeLists.txt
+++ b/emu/CMakeLists.txt
@@ -87,4 +87,4 @@ target_link_libraries(${EMU_TARGET}
 #set(CMAKE_C_FLAGS_RELEASE "-Wall -std=gnu99 -fPIC")
 
 file (GLOB HEADER_FILES *.h)
-install (FILES ${HEADER_FILES} DESTINATION ${INCLUDE_INSTALL_DIR})
+#install (FILES ${HEADER_FILES} DESTINATION ${INCLUDE_INSTALL_DIR})
